Search aantal overtredingen works

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -16,5 +16,11 @@
     <br />
     <br />
     <br />
+    <h2>Search overtreding by aantal_overtredingen_snelheid</h2>
+
+    <form action="/search2" method="POST">
+      aantal_overtredingen_snelheid : <input type="text" name="aantal_overtredingen_snelheid" /><br /><br />
+      <button type="submit">Search</button>
+    </form>
   </body>
 </html>
